# SZE-MOSZE-2020-NullPointerException

./: .gitignore  AdvancedHero.cpp  AdvancedHero.h  AdvancedHero_8h_source.html  Character.cpp  Character.h  Character_8h_source.html  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  JsonParser.cpp  JsonParser.h  JsonParser_8h_source.html  Makefile  Monster.cpp  Monster.h  Monster_8h_source.html  README.md  annotated.html  autotoc_md0.html  classAdvancedHero-members.html  classAdvancedHero.html  classAdvancedHero__coll__graph.md5  classAdvancedHero__inherit__graph.map  classAdvancedHero__inherit__graph.md5  classCharacter-members.html  classCharacter.html  classCharacter__inherit__graph.map  classCharacter__inherit__graph.md5  classHero-members.html  classHero.html  classHero__coll__graph.map  classHero__coll__graph.md5  classHero__inherit__graph.map  classHero__inherit__graph.md5  classJSON-members.html  classJSON.html  (+31 more)
mosze-rpg-game.xcodeproj/: project.pbxproj
mosze3/: main.cpp
mosze3.xcodeproj/: project.pbxproj
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
test/: CMakeLists.txt  test_warrior.json  unit_test.cpp  wrong_json.json
units/: batman.json  (+11 more)
(+8 files in other folders)
